# roxabi-cortex

./: .gitignore  .license-policy.json  .pre-commit-config.yaml  .release-please-manifest.json  CLAUDE.md  Makefile  README.md  pyproject.toml  release-please-config.json
.claude/: stack.yml
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml  hub-add.yml  publish-memory.yml  release-please.yml
artifacts/analyses/: recap-2026-05-06.md
artifacts/specs/: spec-cortex-insight.md  spec-cortex-memory.md  spec-roxabi-insight.md
docs/: ARCHITECTURE.md  DATA-MODEL.md  contributing.md
docs/adr/: ADR-001-naming-roxabi-cortex.md  ADR-002-deployment-podman-quadlet.md  ADR-003-lake-warehouse-split.md  ADR-004-producers-publish-to-insight.md  ADR-005-encode-vs-consolidate-observation-contract.md  ADR-006-contracts-package-extension.md  ADR-007-source-arrival-mode.md  ADR-008-monorepo-workspace.md  ADR-009-entity-taxonomy.md  ADR-010-lyra-cohabitation.md  ADR-011-storage-duckdb-v1.md  README.md
docs/architecture/: index.md  patterns.md  ubiquitous-language.md
docs/archive/memory-system-v0-2026-04/: 00-summary.md  01-raw-layer.md  02-knowledge-graph.md  03-compiled-truth.md  04-consolidation-nightly.md  05-agent-usage.md  06-execution-model.md  07-decay-mechanism.md  README.md  (+3 more)
docs/guides/: deployment.md  troubleshooting.md
docs/processes/: dev-process.md  issue-management.md
docs/standards/: backend-patterns.md  code-review.md  configuration.md  frontend-patterns.md  testing.md
tools/: file_exemptions.txt  folder_exemptions.txt  qg.conf
