[project]
name = "roxabi-cortex"
version = "0.0.0"
description = "roxabi-cortex monorepo workspace"
requires-python = ">=3.13"

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pyright]
typeCheckingMode = "strict"
exclude = [
    ".venv",
    "tools",
]

[dependency-groups]
dev = [
    "pip-licenses>=5.5.5",
    "pre-commit>=4.6.0",
    "pyyaml>=6.0.3",
    "ruff>=0.15.12",
]
