[project]
license = { text = "AGPL-3.0-or-later" }
name = "roxabi-cortex"
version = "0.0.1"
description = "roxabi-cortex monorepo workspace"
requires-python = ">=3.13"
dependencies = [
    "cortex-insight",
    "cortex-memory",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
cortex-insight = { workspace = true }
cortex-memory = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pyright]
typeCheckingMode = "strict"
exclude = [
    ".venv",
    "tools",
]

[dependency-groups]
dev = [
    "pip-licenses>=5.5.5",
    "pre-commit>=4.6.0",
    "pyright>=1.1.410",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "ruff>=0.15.15",
]
